--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@ body{
 }
 
 #p2{   
-    margin: 0px 0px 0px 0.2rem;
+    margin-left: 0.1rem;
     border-radius: 0.3rem;
-    padding: 0px 0.5rem 0rem 0.5rem;
+    padding: 0px 0.4rem 0rem 0.4rem;
     background-color: var(--blue);
     color: white;
 }
@@ -537,4 +537,78 @@ body{
 #dropdown-content li:hover{
 text-decoration: underline;
 cursor: pointer;
+}
+
+#join-SyncIn-container{
+    padding: 12vh 10vw 12vh 10vw;
+    display: flex;
+    flex-direction:column;
+    align-items: flex-start;
+    background-image: linear-gradient(white,var(--light-blue));
+}
+
+#join-SyncIn-container p{
+    font-size:4rem;
+    font-weight: 300;
+    margin:0;
+    padding-bottom:2vh;
+    color:rgb(31, 31, 31);
+}
+
+#join-SyncIn-container button{
+    color:white;
+    background-color:var(--blue);
+    border-radius: 40px;
+    padding:2ch 2ch;
+    font-size:1.4rem;
+    border:none;
+    font-weight: 700;
+    opacity: 0.8;
+}
+
+#join-SyncIn-container button:hover{
+    cursor: pointer;
+    opacity: 1;
+}
+
+#footer{
+  background-color: var(--light-skin);
+  padding: 4vh 10vw 2vh 10vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#footer ul{
+    list-style: none;
+    padding: 0;
+}
+#f1{
+font-weight: 700;
+    color: var(--blue);
+    font-size: 1.7rem;
+    margin: 0
+}
+#f2{   
+    height: 1.8rem;
+    font-size: 1.7rem;
+    margin-left: 0.1rem;
+    border-radius: 0.3rem;
+    padding: 0px 0.2rem 0rem 0.2rem;
+    background-color: var(--blue);
+    color: white;
+}
+
+.footer-parts p{
+    margin:0;
+    font-weight: 400;
+}
+
+#footer li{
+    font-weight: 300;
+    margin-bottom: 0.8ch;
+}
+
+#footer li:hover{
+    cursor: pointer;
 }
